--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# ftx api creds
 KEY=
 SECRET=
 SUBACCOUNT=
+
+# settings 
+FROM=
+TO=
+ORDERSIZE=
+
+# cron schedule (https://crontab.guru/examples.html)
+SCHEDULE=
